@@ -1,6 +1,6 @@
 <HTML>
 <!-- THIS PAGE IS AUTOMATICALLY GENERATED.  DO NOT EDIT. -->
-<!-- Thu Oct 18 10:37:53 2001 -->
+<!-- Mon Oct 22 12:57:30 2001 -->
 <!-- USING HT2HTML 1.2 -->
 <!-- SEE http://barry.wooz.org/software/ht2html -->
 <!-- User-specified headers:
@@ -131,6 +131,11 @@ Project Management Site at Sourceforge</a><br><br>
 <li><a href="http://www.apress.com/catalog/book/1893115402/" TARGET="Resource Window">
 The qmail Handbook</a> contains a section describing TMDA<br><br>
 
+<li><a href="http://www.visca.com/tmda/tmda_confirm.html" TARGET="Resource Window">tmda_confirm.pl</a> 
+is a Perl script that checks all the CONFIRM messages in the TMDA log
+file entries for the last $hours hours and pulls out the corresponding
+Reply-To header for that message from the TMDA pending directory. It
+then sends a summary to the admin.
 
 
 </TD><!-- end of body cell -->
